# dataflow-join

./: triangle_plan.txt
examples/: motif.rs  triangles-lean.rs  triangles-single.rs  triangles.rs  triangles_timely_isomorphism.rs  triangles_updates_edges.rs  triangles_wings_plan.rs  triangles_wings_rule.rs  wings_plan.rs  wings_plan_labeled_edges_from_file.rs  wings_plan_labeled_vertex_from_file.rs  wings_plan_updates_edges.rs  wings_plan_updates_edges_from_dir.rs  wings_plan_updates_edges_from_file.rs
examples/CountLabeledQuery/: CMakeLists.txt  count_vertex_labeled_query.cpp  plan.hpp
src/: index.rs  lib.rs
src/timely_rule/: extender.rs  index.rs  mod.rs  motif.rs
src/wings_plan/: count_edge_labeled_query_plan.rs  count_vertex_labeled_query_plan.rs  dir_reader.rs  graph_stream.rs  mod.rs  plan.rs
src/wings_rule/: extender.rs  index.rs  intersector.rs  mod.rs
